2008-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/ArrayType.java,
	* javax/management/openmbean/CompositeDataSupport.java,
	* javax/management/openmbean/CompositeType.java,
	* javax/management/openmbean/OpenMBeanAttributeInfoSupport.java,
	* javax/management/openmbean/OpenMBeanInfoSupport.java,
	* javax/management/openmbean/OpenMBeanParameterInfoSupport.java,
	* javax/management/openmbean/SimpleType.java,
	* javax/management/openmbean/TabularDataSupport.java:
	Fix warnings due to use of generics.
	* javax/management/remote/rmi/RMIConnection.java:
	Suppress warnings due to API's use of MarshalledObject.

2008-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/TabularDataSupport.java,
	* javax/management/openmbean/TabularType.java:
	Fix warnings due to use of generics.

2008-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36522:
	* gnu/java/security/PolicyFile.java:
	Correct typo changing seperator to separator.

2008-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36477:
	* gnu/java/lang/CPStringBuilder.java,
	(setLength(int)): Don't ensure capacity when
	new length is 0.
	(ensureCapacity(int)): Allocate double the minimum
	capacity rather than double the array length when
	allocating a new array after a write.
	
2008-06-15  Mario Torre  <neugens@aicas.com>

	* gnu/java/awt/java2d/RasterGraphics.java: remove unused import that cause
	compilation to fail when xpeers are not enabled.

2008-06-15  Mario Torre  <neugens@aicas.com>
 
    * gnu/java/awt/java2d/AbstractGraphics2D.java (setColor): delegate to
    setPaint.
    (setPaint): fix to set paint context and foreground color.
    (imageCache): new field.
    (drawImage): new codepath for scaling images.
    (prepareImage): new method.
    (getPaintContext): set paintContext appropriately.
    * gnu/java/awt/java2d/RasterGraphics.java (renderScanline): new method,