@@ -1,3 +1,9 @@
+2008-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/ObjectName.java,
+	* javax/management/StandardMBean.java:
+	Fix warnings due to use of generics.
+	
 2008-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/openmbean/ArrayType.java,
